fix: sections overflow

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -18,6 +18,11 @@
         overflow-x-hidden
     }
 
+    section {
+        @apply
+        overflow-x-hidden
+    }
+
     h1, h2, h3, h4, h5, h6 {
         @apply
         font-unbounded font-bold
